--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id='app'></div>
-    <script src="./src/baseicuage02.js"></script>
+    <script src="./src/modules.js"></script>
 </body>
 
 </html>
